introductory pages done and favicon added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./assets/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="./CSS/main.css">
     <link rel="stylesheet" href="./CSS/documentation.css">
     <title>Zest UI</title>
@@ -47,7 +51,7 @@
                     <p>Zest UI is a CSS library, integrated with pre-defined styled classes, and <br/>Utilites, for a quick creation of websites, with much focus on Functionality.</p>
                     <div class="btn-section-home">
                         <button class="btn-main-home btn-primary-home">
-                             <a href="./components/avatar/avatar.html">Get started</a>
+                             <a href="./introductory-pages/installation.html">Get started</a>
                         </button>
                         <button class="btn-main-home">
                             <a href="https://github.com/dipen2000/zest-ui" target="_blank">Github</a>
