--- a/introductory-pages/colors.html
+++ b/introductory-pages/colors.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../CSS/zest.css">
     <link rel="stylesheet" href="../CSS/documentation.css">
     <script src="../prism/prism.js" defer></script>
-    <title>Installation | ZestUI</title>
+    <title>Colors | ZestUI</title>
 </head>
 <body>
         <div class="container">
