made some changes to the app

--- a/index.html
+++ b/index.html
@@ -13,17 +13,10 @@
     <title>Zest UI</title>
 </head>
 <body>
-    <!-- <div class="mega-parent-flex-container"> -->
         <div class="container">
             <nav>
                 <div class="lib-name">
                     <a href="./index.html">ZestUI</a>
-                </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="#">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
                 </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
@@ -48,13 +41,13 @@
                     <h1>A CSS <span>UI library</span> to design 
                         your<br/> dream project faster
                     </h1>
-                    <p>Zest UI is a CSS library, integrated with pre-defined styled classes, and <br/>Utilites, for a quick creation of websites, with much focus on Functionality.</p>
+                    <p>Zest UI is a CSS library, integrated with pre-defined styled classes, and <br/>Utilities, for a quick creation of websites, with much focus on Functionality.</p>
                     <div class="btn-section-home">
                         <button class="btn-main-home btn-primary-home">
                              <a href="./introductory-pages/installation.html">Get started</a>
                         </button>
                         <button class="btn-main-home">
-                            <a href="https://github.com/dipen2000/zest-ui" target="_blank">Github</a>
+                            <a href="https://github.com/dipen2000/zest-ui/tree/dev" target="_blank">Github</a>
                        </button>
                     </div>
                 </div>
