--- a/introductory-pages/colors.html
+++ b/introductory-pages/colors.html
@@ -20,12 +20,6 @@
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
                 </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="../components/avatar/avatar.html">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
-                </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
                         <a href="https://twitter.com/DipenChavda2" target="_blank">
@@ -86,7 +80,7 @@
                             Below is the color palette, used by ZestUI, listed with the hex-codes.
                         </p>
                         <section class="component-scetion mb-2">
-                            <div class="component-display">
+                            <div class="component-display only-component-display">
                                 <div class="color-container primary-solid">
                                     <p class="txt-md">Primary</p>
                                     <p class="txt-md">#6366F1</p>
@@ -107,8 +101,6 @@
                                     <p class="txt-md">Warning</p>
                                     <p class="txt-md">#FF9800</p>
                                 </div>
-                            </div>
-                            <div class="component-code-section">
                             </div>
                         </section>
                     </div>
