--- a/introductory-pages/installation.html
+++ b/introductory-pages/installation.html
@@ -9,8 +9,8 @@
     <link rel="icon" type="image/png" sizes="16x16" href="../assets/favicon/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="../prism/prism.css">
-    <link rel="stylesheet" href="../CSS/zest.css">
     <link rel="stylesheet" href="../CSS/documentation.css">
+    <link rel="stylesheet" href="../CSS/zest.css">
     <script src="../prism/prism.js" defer></script>
     <title>Installation | ZestUI</title>
 </head>
@@ -19,12 +19,6 @@
             <nav>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
-                </div>
-                <div class="nav-list">
-                    <ul>
-                        <li><a href="../components/avatar/avatar.html">Docs</a></li>
-                        <li><a href="#">Examples</a></li>
-                    </ul>
                 </div>
                 <div class="social-icon m-left-auto">
                     <div class="nav-icon">
@@ -86,9 +80,8 @@
                             In order to introduce Sparrow to your project, Copy the Link given below and paste it in the <code class="code-text">head</code> tag of your html, above all other style sheets.
                         </p>
                         <section class="component-scetion mb-2">
-                            <div class="component-display">
-                            </div>
-                            <div class="component-code-section">
+                            
+                            <div class="component-code-section only-code-section">
                                 <script type="text/plain" class="language-markup code-snippet">
                                     <link rel="stylesheet" href="the url here">
                                 </script>
