--- a/introductory-pages/installation.html
+++ b/introductory-pages/installation.html
@@ -20,6 +20,9 @@
 <body>
         <div class="container">
             <nav>
+                <div class="btnHambuger">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--charm" width="32" height="32" preserveAspectRatio="xMidYMid meet" viewBox="0 0 16 16"><path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M2.75 12.25h10.5m-10.5-4h10.5m-10.5-4h10.5"></path></svg>
+                </div>
                 <div class="lib-name">
                     <a href="../../index.html">ZestUI</a>
                 </div>
@@ -51,8 +54,9 @@
             </nav>
             <main>
                 <div class="content-section-container">
+                    <div class="drawer-backdrop drawer-backdrop-hide"></div>
                     <aside class="aside-left">
-                        <div class="moving-container aside-left-height">
+                        <div class="aside-left-height moving-container">
                             <div class="aside-list-container txt-align-center">
                                 <ul>
                                     <h3>Get started</h3>
