--- a/introductory-pages/installation.html
+++ b/introductory-pages/installation.html
@@ -98,7 +98,7 @@
                             
                             <div class="component-code-section only-code-section">
                                 <script type="text/plain" class="language-markup code-snippet">
-                                    <link rel="stylesheet" href="the url here">
+                                    <link rel="stylesheet" href="https://zestui.netlify.app/CSS/zest.css">
                                 </script>
                             </div>
                         </section>
